# pacemaker-pomos

./: README.md  pacemaker-pomos.cabal  stack.yaml  writeschedule.cabal
app/: Main.hs
src/Data/: Pacemaker.hs
src/Data/Pacemaker/: Event.hs
test/: example.ics
test/Data/: PacemakerFixture.hs  PacemakerSpec.hs
