name:                pacemaker-pomos
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/corajr/pacemaker-pomos#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          me@corajr.com
copyright:           2016 Cora Johnson-Roberson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Pacemaker
                     , Data.Pacemaker.Event
  build-depends:       base >= 4.7 && < 5
                     , iCalendar
                     , bytestring
                     , containers
                     , time
                     , text
                     , data-default
  default-language:    Haskell2010

executable pacemaker-pomos
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , pacemaker-pomos
  default-language:    Haskell2010

test-suite pacemaker-pomos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pacemaker-pomos
                     , hspec
                     , QuickCheck
                     , iCalendar
                     , time
                     , containers
                     , text
                     , bytestring
                     , here
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/writeschedule
